erDiagram
    PROJECT {
        string id PK
        string userId
        string name
        int bannerBgColor
        string bannerType
        string bannerImagePath
        string bannerLottiePath
        string details
        string link
        string shortDescription
        string role
        int developmentTime
        string githubLink
        dateTime releaseDate
    }
    
    PROJECT_CAROUSEL_IMAGES {
        string id PK
        string projectId FK
        string imagePath
    }
    
    PROJECT_TECH_STACK {
        string id PK
        string projectId FK
        string technology
    }
    
    PROJECT_TAGS {
        string id PK
        string projectId FK
        string tag
    }
    
    PROJECT_ADDITIONAL_LINKS {
        string id PK
        string projectId FK
        string link
    }
    
    TEAM_MEMBER {
        string id PK
        string projectId FK
        string name
        string role
        string avatarPath
        string linkedinUrl
    }
    
    FEATURE {
        string id PK
        string projectId FK
        string title
        string description
        string iconName
    }
    
    CHALLENGE {
        string id PK
        string projectId FK
        string title
        string description
        string solution
    }
    
    TESTIMONIAL {
        string id PK
        string projectId FK
        string quote
        string author
        string role
        string avatarPath
    }
    
    PROJECT_STATS {
        string id PK
        string projectId FK
        int users
        int stars
        int forks
        int downloads
        int contributions
    }
    
    FUTURE_ENHANCEMENT {
        string id PK
        string projectId FK
        string title
        string description
        string status
    }
    
    PROJECT ||--o{ PROJECT_CAROUSEL_IMAGES : has
    PROJECT ||--o{ PROJECT_TECH_STACK : uses
    PROJECT ||--o{ PROJECT_TAGS : tagged_with
    PROJECT ||--o{ PROJECT_ADDITIONAL_LINKS : links_to
    PROJECT ||--o{ TEAM_MEMBER : has
    PROJECT ||--o{ FEATURE : includes
    PROJECT ||--o{ CHALLENGE : faced
    PROJECT ||--o{ TESTIMONIAL : received
    PROJECT ||--o{ FUTURE_ENHANCEMENT : plans
    PROJECT ||--o| PROJECT_STATS : tracks
